@@ -8,7 +8,12 @@ copyright_holder = Sven Kirmess
 [Bootstrap::lib]
 [@Author::SKIRMESS]
 stopwords = SKIRMESS
+stopwords = TravisCI
 stopwords = dist
+stopwords = perlcriticrc
+stopwords = perltidy
+stopwords = perltidyrc
+stopwords = travis
 travis_ci_ignore_perl = 5.8
 
 [Prereqs::Plugins]
